Spacing fix, add May 9

--- a/blog.css
+++ b/blog.css
@@ -195,8 +195,8 @@ a:hover {
 }
 
 article {
-    letter-spacing: 0.5px;
-    line-height: 1.5;
+    letter-spacing: 0px;
+    line-height: 1.3;
 }
 
 #cat_head {
